# pdg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: ex_3dof_mars.cpp  ex_6dof_landing.cpp  ex_monte_carlo.cpp  plot_results.py
include/pdg/: lcvx.hpp  linalg.hpp  mc.hpp  pdg.hpp  rocket.hpp  scvx.hpp  sim.hpp  socp.hpp
src/: lcvx.cpp  linalg.cpp  mc.cpp  rocket.cpp  scvx.cpp  sim.cpp  socp.cpp
tests/: test_framework.hpp  test_lcvx.cpp  test_linalg.cpp  test_scvx.cpp  test_sim.cpp  test_socp.cpp
